# shape-set-analyzer

./: .gitignore  README.md  config.example.json  pyproject.toml
docs/: primer.md
src/shape_set_analyzer/: __init__.py  __main__.py
src/shape_set_analyzer/config/: __init__.py  loader.py
src/shape_set_analyzer/imports/: __init__.py  importer.py  scanner.py
src/shape_set_analyzer/models/: imported_shape.py  set_analysis.py  set_comparison.py
src/shape_set_analyzer/projects/: __init__.py  manager.py  repository.py
